--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
   integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="css1.css">
+  <link rel="icon" type="image/png" href="https://iconos8.es/icon/121111/c-programaci%C3%B3n" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://iconos8.es/icon/121111/c-programaci%C3%B3n" sizes="16x16">
+  <link rel="shortcut icon" type="image/png" href="https://iconos8.es/icon/121111/c-programaci%C3%B3n" sizes="16x16">
   <title>boostrap cv</title>
 </head>
 <body>
@@ -18,10 +21,10 @@
       <a class="nav-link"  href="https://facux95.github.io/pagina2/">Proyectos</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Quienes Somos</a>
+      <a class="nav-link" href="https://facux95.github.io/pagina3/">Quienes Somos</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Nuestro  Contacto</a>
+      <a class="nav-link" href="https://github.com/Facux95/pagina4.git">Contacto</a>
     </li>
   </ul>
 
