--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/png" href="https://iconos8.es/icon/121111/c-programaci%C3%B3n" sizes="32x32">
   <link rel="icon" type="image/png" href="https://iconos8.es/icon/121111/c-programaci%C3%B3n" sizes="16x16">
   <link rel="shortcut icon" type="image/png" href="https://iconos8.es/icon/121111/c-programaci%C3%B3n" sizes="16x16">
-  <title>boostrap cv</title>
+  <title>Codex Inc</title>
 </head>
 <body>
   <ul class="nav nav-tabs">
